<resources>
    <string name="app_name">ConversionApp</string>
    <string name="Header">Currency Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="_0_00" translatable="false">0.00$</string>
    <string name="todo">TODO</string>
    <string name="convert">converter</string>
    <string name="convertView" translatable="false">_</string>
    <string name="currFrom">From</string>
    <string name="currTo">To</string>
    <string name="CurrError">Choose two different Currencies</string>
    <string name="CurrErrorOK" translatable="false">OK</string>
</resources>